--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
         <title>Google Search Clone</title>
     </head>
     <body>
-        <header>
-            
+        <header class="header">
+            <img class="header__grid" src="./assets/cuadricula.png" alt="header-grid">
+            <ul class="header__links">
+                <li><a href="#">Gmail</a></li>
+                <li><a href="#">Drive</a></li>
+            </ul>
         </header>
         <section>
 
