--- a/index.html
+++ b/index.html
@@ -3,22 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./styles.css">
-        <title>Google Search Clone</title>
+        <link rel="stylesheet" href="./css/main.css">
+        <title>Google-clone</title>
     </head>
     <body>
-        <header class="header">
-            <img class="header__grid" src="./assets/cuadricula.png" alt="header-grid">
-            <ul class="header__links">
-                <li><a href="#">Gmail</a></li>
-                <li><a href="#">Drive</a></li>
-            </ul>
+        <header>
+            <nav>
+                <ul class="nav-right-section">
+                    <li><a href="">Gmail</a></li>
+                    <li><a href="">Drive</a></li>
+                    <li><a href="">Icon</a></li>
+                    <li><a href="">Photo</a></li>
+                </ul>
+            </nav>
         </header>
-        <section>
-
-        </section>
-        <footer>
-
-        </footer>
     </body>
 </html>
