--- a/index.html
+++ b/index.html
@@ -12,10 +12,55 @@
                 <ul class="nav-right-section">
                     <li><a href="">Gmail</a></li>
                     <li><a href="">Drive</a></li>
-                    <li><a href="">Icon</a></li>
-                    <li><a href="">Photo</a></li>
+                    <li class="menu-icon"><a href=""></a></li>
+                    <li><a href=""><img src="https://lh3.googleusercontent.com/ogw/ADGmqu_k-mL0lbtLjalZNfmwvI9UKCQu7wGGPTZ7e66S=s32-c-mo" alt=""></a></li>
                 </ul>
             </nav>
         </header>
+        <main>
+            <section class="main-logo">
+                <img src="./css/assets/google-logo.png" alt="Google logo">
+            </section>
+            <section class="main-input">
+                <div class="main-input-container">
+                    <span class="search-icon">
+
+                    </span>
+                    <input type="text">
+                    <a class="micro-icon" href=""></a>
+                </div>
+            </section>
+            <section class="main-buttons">
+                <div><button>Buscar con Google</button></div>
+                <div><button>Me siento con suerte</button></div>
+            </section>
+        </main>
+        <footer>
+            <ul class="footer-left">
+                <li>
+                    <a href="">Publicidad</a>
+                </li>
+                <li>
+                    <a href="">Negocios</a>
+                </li>
+                <li>
+                    <a href="">Acerca de</a>
+                </li>
+                <li>
+                    <a href="">Cómo buscar</a>
+                </li>
+            </ul>
+            <ul class="footer-right">
+                <li>
+                    <a href="">Privacidad</a>
+                </li>
+                <li>
+                    <a href="">Condiciones</a>
+                </li>
+                <li>
+                    <a href="">Preferencias</a>
+                </li>
+            </ul>
+        </footer>
     </body>
 </html>
